2005-01-01  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Don't use C# v2 features; fixes build under CSC.EXE.

2004-12-30  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: On miguel's suggestion, rename Sighandler_t to SignalHandler.

2004-12-30  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Implement all C89 <stdio.h> functions except for the scanf(3)
	  family.  These are too dangerous to expose.

2004-12-30  Jonathan Pryor <jonpryor@vt.edu>

	* CdeclFunctions.cs: Remove warning about unused variable.
	* Stdlib.cs: Make signal(2) sane and (hopefully) complete.
	* Syscall.cs: Fix cuserid Obsolete message to reference correct class name.
	* UnixProcess.cs: Remove warning about unused variable.
	* UnixMarshal.cs: Remove warnings about unused variables.

2004-12-29  Jonathan Pryor <jonpryor@vt.edu>

	* UnixPath.cs: Add ReadSymbolicLink(), which takes an intelligent approach
	  to reading symlinks (since their contents may be any size, we grow the
	  buffer dynamically to fit them all, instead of assuming a maximum size).
	* UnixSymbolicLinkInfo.cs: Remove MaxContentsSize.

2004-12-29  Jonathan Pryor <jonpryor@vt.edu>

	* UnixPath.cs: Add check for when symlink points to a full path name.

2004-12-29  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: Fix Object.Equals implementations.
	* UnixPath.cs: New & improved, with Testing!  GetRealPath() is changed so
	  that it doesn't walk the entire path looking for symlinks, it just reads 
	  the leaf.  GetCompletRealPath() walks the entire path resolving symlinks.
	  GetCanonicalPath() added, which "cleans up" a path (removing extraneous
	  "." and ".." entries).
	* UnixSymbolicLinkInfo.cs: Rename ContentsLength -> MaxContentsSize.

2004-12-28  Jonathan Pryor <jonpryor@vt.edu>

	* UnixFileSystemInfo.cs: Add a link(2) wrapper, CreateLink().  Strictly
	  speaking it's only "safe" to do this on files, but an exception will be 
	  returned if the user tries to hard link directories (because of EPERM), 